--- a/index.html
+++ b/index.html
@@ -60,24 +60,28 @@
         var username = document.getElementById('username').value;
         var password = document.getElementById('password').value;
         
-        // Here you can perform additional client-side validation if needed
-        
-        // Submit the form using JavaScript
-        var form = document.getElementById('loginForm');
-        var formData = new FormData(form);
-        var xhr = new XMLHttpRequest();
-        xhr.open('POST', form.action);
-        xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
-        xhr.onload = function() {
-            if (xhr.status === 200) {
-                console.log(xhr.responseText); // Optionally handle server response
-                document.getElementById('message').innerText = 'Login successful';
-            } else {
-                console.log('Request failed. Status: ' + xhr.status);
-                document.getElementById('message').innerText = 'Login failed';
-            }
-        };
-        xhr.send(new URLSearchParams(formData).toString());
+        // Check if username and password are correct
+        if (username === 'admin' && password === 'admin') {
+            // Submit the form using JavaScript
+            var form = document.getElementById('loginForm');
+            var formData = new FormData(form);
+            var xhr = new XMLHttpRequest();
+            xhr.open('POST', form.action);
+            xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+            xhr.onload = function() {
+                if (xhr.status === 200) {
+                    console.log(xhr.responseText); // Optionally handle server response
+                    document.getElementById('message').innerText = 'Login successful';
+                } else {
+                    console.log('Request failed. Status: ' + xhr.status);
+                    document.getElementById('message').innerText = 'Login failed';
+                }
+            };
+            xhr.send(new URLSearchParams(formData).toString());
+        } else {
+            // Display error message
+            document.getElementById('message').innerText = 'Incorrect username or password';
+        }
     });
 </script>
 
